--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <body>
     収縮開始まで<span id="info">--</span>秒
     <input id="start" type="button" value="すたーと">
+    <input id="m1" type="button" value="-1">
+    <input id="p1" type="button" value="+1">
     <input id="pause" type="button" value="いちじていし">
     <input id="stop" type="button" value="すとっぷ">
     <video id="sound60" width="0" height="0">
