fix bug and change timer info

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="./js/timer.js"></script>
   </head>
   <body>
-    収縮開始まで<span id="info">--</span>秒
+    収縮開始まで<span id="info">--</span>
     <input id="start" type="button" value="すたーと">
     <input id="m1" type="button" value="-1">
     <input id="p1" type="button" value="+1">
