add area end notice

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="./js/timer.js"></script>
   </head>
   <body>
-    収縮開始まで<span id="info">--</span>
+    <span id="info">--</span>
     <input id="start" type="button" value="すたーと">
     <input id="m1" type="button" value="-1">
     <input id="p1" type="button" value="+1">
@@ -25,6 +25,12 @@
     </video>
     <video id="sound0" width="0" height="0">
       <source src="./sounds/0.wav">
+    </video>
+    <video id="soundstart" width="0" height="0">
+      <source src="./sounds/start.wav">
+    </video>
+    <video id="soundend" width="0" height="0">
+      <source src="./sounds/end.wav">
     </video>
   </body>
 </html>
