--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <script type="text/javascript" src="./js/timer.js"></script>
   </head>
   <body>
-    <span id="info">--</span>
+    <span id="info"></span>
     <input id="start" type="button" value="すたーと">
+    <input id="start30" type="button" value="すたーと+30">
     <input id="m1" type="button" value="-1">
     <input id="p1" type="button" value="+1">
     <input id="pause" type="button" value="いちじていし">
