can change start time

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <span id="info"></span>
+    <span id="startInputArea">マッチ開始まで<input id="startInput" type="text" value="60" size="2">秒</span>
     <input id="start" type="button" value="すたーと">
-    <input id="start30" type="button" value="すたーと+30">
     <input id="m1" type="button" value="-1">
     <input id="p1" type="button" value="+1">
     <input id="pause" type="button" value="いちじていし">
