--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
   </head>
   <body>
     <span id="info"></span>
-    <span id="startInputArea">マッチ開始まで<input id="startInput" type="text" value="60" size="2">秒</span>
+    <span id="startInputArea">マッチ開始まで
+      <select id="startInput">
+        <option>60</option>
+        <option>50</option>
+        <option>40</option>
+        <option>30</option>
+        <option>20</option>
+        <option>10</option>
+        <option>0</option>
+      </select>
+      秒</span>
     <input id="start" type="button" value="すたーと">
     <input id="m1" type="button" value="-1">
     <input id="p1" type="button" value="+1">
