--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     <input id="start" type="button" value="すたーと">
     <input id="m1" type="button" value="-1">
     <input id="p1" type="button" value="+1">
-    <input id="pause" type="button" value="いちじていし">
-    <input id="stop" type="button" value="すとっぷ">
+    <input id="stop" type="button" value="しゅうりょう">
+    <br>
+    volume<input id="volume" type="range">
     <video id="sound60" width="0" height="0">
       <source src="./sounds/60.wav">
     </video>
