--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <input id="stop" type="button" value="しゅうりょう">
     <br>
     volume<input id="volume" type="range">
+    <br>
+    <span style="font-size: 8pt;">タイミング合わせてすたーとすれば60秒前とかそういうタイミングで教えてくれるんじゃないかな</span>
     <video id="sound60" width="0" height="0">
       <source src="./sounds/60.wav">
     </video>
