--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
     <input id="stop" type="button" value="しゅうりょう">
     <br>
     volume<input id="volume" type="range">
-    <br>
-    <span style="font-size: 8pt;">タイミング合わせてすたーとすれば60秒前とかそういうタイミングで教えてくれるんじゃないかな</span>
+    <div style="font-size: 8pt;">
+      タイミング合わせてすたーとすれば収縮開始60秒前とかそういうタイミングで棒読みちゃんが教えてくれるんじゃないかな！
+    </div>
     <video id="sound60" width="0" height="0">
       <source src="./sounds/60.wav">
     </video>
